--- a/register.html
+++ b/register.html
@@ -9,7 +9,7 @@
 <body>
     <div class="register">
         <h3>ثبت نام</h3>
-        <form id="registrationForm">
+        <form id="registrationForm" method="POST" action="register.php">
             <input type="text" name="firstName" placeholder="نام" required>
             <input type="text" name="lastName" placeholder="نام خانوادگی" required>
             <input type="text" name="phoneNumber" placeholder="شماره تلفن" required>
@@ -41,7 +41,7 @@
             .then(data => {
                 alert(data.message); // نمایش پیام موفقیت یا خطا
                 if (data.status === 'success') {
-                    window.location.href = 'index2.html'; // هدایت به صفحه home
+                    window.location.href = 'index.html'; // هدایت به صفحه home
                 }
             })
             .catch(error => {
